# surpass

./: .gitignore  CMakeLists.txt  README.md
data/: monomers.txt
data/forcefield/: surpass.wghts
data/forcefield/local/: tau.txt
data/forcefield/representations/: backbone-and-cen.properties
src/: CMakeLists-core.txt  CMakeLists-modeling.txt  CMakeLists.txt
src/apps/: dssp_to_ss2.cc  pdb_to_fasta.cc  surpass.cc  surpass_representation.cc
src/core/: SURPASSenvironment.cc  SURPASSenvironment.hh  SURPASSversion.cc  SURPASSversion.cc.in  SURPASSversion.hh  index.hh  real.hh
src/core/algorithms/: SimpleGraph.hh  UnionFind.hh  basic_algorithms.hh
src/core/alignment/: AlignmentBlock.cc  AlignmentBlock.hh  AlignmentRow.hh  PairwiseAlignment.cc  PairwiseAlignment.hh  PairwiseSequenceAlignment.cc  PairwiseSequenceAlignment.fwd.hh  PairwiseSequenceAlignment.hh  PairwiseStructureAlignment.hh  on_alignment_computations.cc  on_alignment_computations.hh
src/core/alignment/scoring/: SimilarityMatrix.cc  SimilarityMatrix.hh
src/core/calc/: sse_math.cc  sse_math.hh
src/core/calc/numeric/: Function1D.hh  Interpolate1D.hh  Interpolate2D.hh  InterpolatePeriodic2D.hh  basic_math.cc  basic_math.hh  interpolators.hh
src/core/calc/statistics/: NormalDistribution.cc  NormalDistribution.hh  PDF.hh  Random.cc  Random.hh  RandomSequenceIterator.hh
src/core/calc/structural/: angles.hh  calculate_from_structure.hh
src/core/chemical/: AtomicElement.cc  AtomicElement.hh  Monomer.cc  Monomer.hh  monomer_io.cc  monomer_io.hh
src/core/data/basic/: Array2D.hh  Vec3.cc  Vec3.fwd.hh  Vec3.hh  Vec3Cubic.cc  Vec3Cubic.hh
src/core/data/io/: Cif.cc  Cif.hh  DataTable.cc  DataTable.hh  DsspData.cc  DsspData.hh  Pdb.cc  Pdb.hh  PdbField.hh  fasta_io.cc  fasta_io.hh  ss2_io.cc  ss2_io.hh
src/simulations/: atom_indexing.hh
src/simulations/evaluators/: EchoEvaluator.hh  Evaluator.cc  Evaluator.hh  Timer.cc  Timer.hh
src/simulations/forcefields/: ByResidueEnergy.hh  CalculateEnergyBase.hh  ForceFieldConfig.cc  ForceFieldConfig.hh  LongRangeByResidues.hh  ShortRangeEnergyBase.hh  TotalEnergy.hh  TotalEnergyByResidue.cc  TotalEnergyByResidue.hh
src/simulations/movers/: Mover.hh  MoversSet.cc  MoversSet.hh  PerturbChainFragment.cc  PerturbChainFragment.hh  PerturbResidue.cc  PerturbResidue.hh
src/simulations/observers/: ObserveEnergyComponents.cc  ObserveEnergyComponents.hh  ObserveEvaluators.cc  ObserveEvaluators.hh  ObserveMoversAcceptance.cc  ObserveMoversAcceptance.hh  ObserveReplicaFlow.cc  ObserveReplicaFlow.fwd.hh  ObserveReplicaFlow.hh  ObserverInterface.hh  ObserverTrigger.hh  ToStreamObserver.hh  TriggerEveryN.hh  TriggerLowEnergy.hh
src/simulations/representations/: surpass_utils.cc  surpass_utils.hh
src/simulations/sampling/: AbstractAcceptanceCriterion.hh  IsothermalMC.cc  IsothermalMC.hh  MetropolisAcceptanceCriterion.hh  ReplicaExchangeMC.cc  ReplicaExchangeMC.fwd.hh  ReplicaExchangeMC.hh  SamplingProtocolBase.hh  SimulatedAnnealing.cc  SimulatedAnnealing.hh
src/simulations/systems/: AtomTypingBase.cc  AtomTypingBase.hh  AtomTypingInterface.hh  AtomTypingVariants.cc  AtomTypingVariants.hh  BuildPolymerChain.cc  BuildPolymerChain.hh  CartesianAtomsSimple.hh  ResidueChain.hh  SingleAtomType.hh
src/utils/: LogManager.cc  LogManager.hh  Logger.cc  Logger.hh  exit.cc  exit.hh  io_utils.cc  io_utils.hh  string_utils.cc  string_utils.hh  web_utils.cc  web_utils.hh
src/utils/exceptions/: AtomNotFound.hh  NoSuchFile.hh
src/utils/options/: Option.cc  Option.hh  OptionParser.cc  OptionParser.hh  calc_options.hh  input_options.hh  output_options.hh  sampling_from_cmdline.cc  sampling_from_cmdline.hh  sampling_options.hh  scoring_options.hh
(+61 files in other folders)
